css themes word-spacing fix

--- a/public_html/assets/css/HTML5Uploader/lightsimpleTheme.css
+++ b/public_html/assets/css/HTML5Uploader/lightsimpleTheme.css
@@ -81,6 +81,7 @@
     line-height: 24px;
     font-weight: 400;
     letter-spacing: 0.4px;
+    word-spacing: 0px;
 }
 
 .HTML5Uploader .upload-wrapper {
